bug fix: libs下的so库不加载，强制使用armv7a的包

--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -16,21 +16,20 @@ add_library(native-lib
         ${CMAKE_SOURCE_DIR}/ffmpeg/ffmpeg_opt.c
         )]]
 #加载动态库，作为本地库使用.
-#add_library(ffmpeg
-#        SHARED
-#        IMPORTED )
-#set_target_properties( ffmpeg
-#        PROPERTIES IMPORTED_LOCATION
-#        ../../../../libs/arm64-v8a/libffmpeg.so )
+add_library(ffmpeg
+        SHARED
+        IMPORTED )
+set_target_properties( ffmpeg
+        PROPERTIES IMPORTED_LOCATION
+        ../../../../libs/${CMAKE_ANDROID_ARCH_ABI}/libffmpeg.so )
 
 #设置链接静态库的目录.
-set(my_lib_path ${CMAKE_SOURCE_DIR}/../../../libs/${CMAKE_ANDROID_ARCH_ABI})
-#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -L${git amy_lib_path}")
-
-#设置c++编译标记，代表当前项目使用c++编译.
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11  -L${my_lib_path}")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
+LINK_DIRECTORIES(${my_lib_path})
+#设置c++编译标记，代表当前项目使用c++编译. -L${my_lib_path}
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11 ")
 # 引入头文件.
-include_directories(${CMAKE_SOURCE_DIR})
+#include_directories(${CMAKE_SOURCE_DIR})
 include_directories(${CMAKE_SOURCE_DIR}/ffmpeg)
 include_directories(${CMAKE_SOURCE_DIR}/include)
 
@@ -43,7 +42,4 @@ target_link_libraries(
                        native-lib
 #                       ffmpeg-cmd
                        ffmpeg
-                       -landroid #native_window
-                       -ljnigraphics #bitmap
-                       -lOpenSLES #openSLES
                        ${log-lib} )
