--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,7 @@ android {
         externalNativeBuild {
             cmake {
                 cppFlags ""
-                abiFilters "arm64-v8a" ,"armeabi-v7a"
+                abiFilters /*"arm64-v8a",*/ "armeabi-v7a"
             }
         }
     }
@@ -35,6 +35,9 @@ android {
         }
     }
     ndkVersion = '20.0.5594570'
+    sourceSets.main {
+        jniLibs.srcDirs = ['libs']
+    }
 }
 
 dependencies {
