编译好的so解决了编译问题，还有问题明天在解决，可以正常运行了但是 无法解析文件流明天看

--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -1,11 +1,11 @@
 cmake_minimum_required(VERSION 3.4.1)
+file(GLOB SOURCE ${CMAKE_SOURCE_DIR}/*.c ${CMAKE_SOURCE_DIR}/*.h)
+#add_library(native-lib
+#             SHARED
+#             native-lib.cpp
+#             )
 
-add_library(native-lib
-             SHARED
-             native-lib.cpp
-             )
-
-#[[add_library( # Sets the name of the library.
+add_library( # Sets the name of the library.
         ffmpeg-cmd
         # Sets the library as a shared library.
         SHARED
@@ -14,7 +14,9 @@ add_library(native-lib
         ${CMAKE_SOURCE_DIR}/ffmpeg/ffmpeg.c
         ${CMAKE_SOURCE_DIR}/ffmpeg/ffmpeg_filter.c
         ${CMAKE_SOURCE_DIR}/ffmpeg/ffmpeg_opt.c
-        )]]
+        ${CMAKE_SOURCE_DIR}/ffmpeg_cmd.c
+        ${CMAKE_SOURCE_DIR}/ffmpeg_thread.c
+        )
 #加载动态库，作为本地库使用.
 add_library(ffmpeg
         SHARED
@@ -23,13 +25,12 @@ set_target_properties( ffmpeg
         PROPERTIES IMPORTED_LOCATION
         ../../../../libs/${CMAKE_ANDROID_ARCH_ABI}/libffmpeg.so )
 
-#设置链接静态库的目录.
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
-LINK_DIRECTORIES(${my_lib_path})
-#设置c++编译标记，代表当前项目使用c++编译. -L${my_lib_path}
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11 ")
+set(my_lib_path ${CMAKE_SOURCE_DIR}/../../../libs/${CMAKE_ANDROID_ARCH_ABI})
+#设置c++编译标记，代表当前项目使用c++编译.-std=c++11 -L${my_lib_path}
+set(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} ")
+
 # 引入头文件.
-#include_directories(${CMAKE_SOURCE_DIR})
+include_directories(${CMAKE_SOURCE_DIR})
 include_directories(${CMAKE_SOURCE_DIR}/ffmpeg)
 include_directories(${CMAKE_SOURCE_DIR}/include)
 
@@ -39,7 +40,10 @@ find_library(
 
 #链接共享库到目标库libnative-lib中.
 target_link_libraries(
-                       native-lib
-#                       ffmpeg-cmd
+                       ffmpeg-cmd
                        ffmpeg
+#                        avfilter avformat avcodec avutil swresample swscale
+                        android
+                        z
+                        OpenSLES
                        ${log-lib} )
