--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,10 @@ android {
                 abiFilters /*"arm64-v8a",*/ "armeabi-v7a"
             }
         }
+        ndk {
+            abiFilters "armeabi-v7a"//"arm64-v8a"/*,"""armeabi-v7a"*/
+        }
+
     }
 
     buildTypes {
