--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     defaultConfig {
         applicationId "com.example.ffmpegtools"
         minSdkVersion 16
-        targetSdkVersion 29
+        targetSdkVersion 28 //29会无法读取内存卡.
         versionCode 1
         versionName "1.0"
 
