--- a/build.gradle
+++ b/build.gradle
@@ -3,13 +3,17 @@
 buildscript {
     
     repositories {
+        maven {
+            url 'http://172.16.22.18:8081/repository/maven-public/'
+        }
         google()
         jcenter()
         
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.1'
-        
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4.1'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -18,6 +22,9 @@ buildscript {
 
 allprojects {
     repositories {
+        maven {
+            url 'http://172.16.22.18:8081/repository/maven-public/'
+        }
         google()
         jcenter()
         
