上传到私有库Nexus基本配置.

--- a/gradle.properties
+++ b/gradle.properties
@@ -27,7 +27,7 @@ COMPILE_TOOL_API_VERSION = 29.0.3
 
 VERSION_NAME=0.0.1
 VERSION_CODE=100001
-GROUP=com.jdpxiaoming.ffmpeg_cmd
+GROUP=com.jdpxiaoming.media
 
 # http://central.sonatype.org/pages/requirements.html
 POM_USER_ORG=jdpxiaoming
