--- a/ffmpeg-cmd/build.gradle
+++ b/ffmpeg-cmd/build.gradle
@@ -49,9 +49,17 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
 
-
-//新建一个任务，这里只需要定义名字，下面的配置文件中会自动获取相关配置信息.
-uploadArchives {
-
+//加上这些
+tasks.withType(Javadoc) {
+    options{ encoding "UTF-8"
+        charSet 'UTF-8'
+        links "http://docs.oracle.com/javase/7/docs/api"
+    }
 }
-apply from: new File(rootProject.projectDir, "tools/gradle-on-demand.gradle");
+//新建一个任务，这里只需要定义名字，下面的配置文件中会自动获取相关配置信息.
+//上传maven或者私有库中.
+/*bintrayUpload {
+
+}*/
+//apply from: new File(rootProject.projectDir, "tools/gradle-on-demand.gradle");
+apply from: new File(rootProject.projectDir, 'tools/gradle-bintray-upload.gradle')
