--- a/gradle.properties
+++ b/gradle.properties
@@ -25,15 +25,15 @@ COMPILE_TOOL_API = 29
 COMPILE_TOOL_API_VERSION = 29.0.3
 
 
-VERSION_NAME=0.0.1
-VERSION_CODE=100001
-GROUP=com.jdpxiaoming.media
+VERSION_NAME=0.0.2
+VERSION_CODE=100002
+GROUP=com.github.jdpxiaoming
 
 # http://central.sonatype.org/pages/requirements.html
-POM_USER_ORG=jdpxiaoming
+POM_USER_ORG=media
 POM_DESCRIPTION=Video player based on FFmpeg n4.0.2
 POM_URL=https://github.com/jdpxiaoming/FFmpegTools/
-POM_SCM_URL=https://github.com/jdpxiaoming/FFmpegTools/
+POM_SCM_URL=https://github.com/jdpxiaoming/FFmpegTools.git
 POM_SCM_CONNECTION=scm:git:git@github.com:jdpxiaoming/FFmpegTools.git
 POM_SCM_DEV_CONNECTION=scm:git:git@github.com:jdpxiaoming/FFmpegTools.git
 POM_LICENSE_NAME=LGPL-2.1
@@ -43,11 +43,9 @@ POM_DEVELOPER_ID=jdpxiaoming
 POM_DEVELOPER_NAME=Cai Xing Ming
 POM_DEVELOPER_EMAIL=poe.caixingming@gmail.com
 
-
 # nexus对应的Maven配置.
 RELEASE_REPOSITORY_URL=http://172.16.22.18:8081/repository/android/
 # 这里我的私有仓库只有release仓库，没有建snapshot和release的host仓库,有兴趣可以自行添加.
 SNAPSHOT_REPOSITORY_URL=http://172.16.22.18:8081/repository/android/
-NEXUS_USERNAME=android
-NEXUS_PASSWORD=android
-
+BINTRAY_USER=jdpxiaoming
+BINTRAY_APIKEY=
