--- a/gradle.properties
+++ b/gradle.properties
@@ -25,8 +25,8 @@ COMPILE_TOOL_API = 29
 COMPILE_TOOL_API_VERSION = 29.0.3
 
 
-VERSION_NAME=0.0.2
-VERSION_CODE=100002
+VERSION_NAME=0.0.3
+VERSION_CODE=100003
 GROUP=com.github.jdpxiaoming
 
 # http://central.sonatype.org/pages/requirements.html
@@ -48,4 +48,6 @@ RELEASE_REPOSITORY_URL=http://172.16.22.18:8081/repository/android/
 # 这里我的私有仓库只有release仓库，没有建snapshot和release的host仓库,有兴趣可以自行添加.
 SNAPSHOT_REPOSITORY_URL=http://172.16.22.18:8081/repository/android/
 BINTRAY_USER=jdpxiaoming
-BINTRAY_APIKEY=
+BINTRAY_APIKEY=您的APPID（bintray.jfrog)
+NEXUS_USERNAME=android
+NEXUS_PASSWORD=android
