rtsp dump and encoder 30%

--- a/gradle.properties
+++ b/gradle.properties
@@ -48,6 +48,6 @@ RELEASE_REPOSITORY_URL=http://172.16.22.18:8081/repository/android/
 # 这里我的私有仓库只有release仓库，没有建snapshot和release的host仓库,有兴趣可以自行添加.
 SNAPSHOT_REPOSITORY_URL=http://172.16.22.18:8081/repository/android/
 BINTRAY_USER=jdpxiaoming
-BINTRAY_APIKEY=·
+BINTRAY_APIKEY=dc12563ec4b151a253dd4aa83280f05406e90acc
 NEXUS_USERNAME=android
 NEXUS_PASSWORD=android
