--- a/ffmpeg-cmd/build.gradle
+++ b/ffmpeg-cmd/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion COMPILE_TOOL_API as int
@@ -47,6 +48,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation "androidx.core:core-ktx:+"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 
 //加上这些
@@ -62,3 +65,6 @@ tasks.withType(Javadoc) {
 }*/
 //apply from: new File(rootProject.projectDir, "tools/gradle-on-demand.gradle");
 apply from: new File(rootProject.projectDir, 'tools/gradle-bintray-upload.gradle')
+repositories {
+    mavenCentral()
+}
