--- a/gradle.properties
+++ b/gradle.properties
@@ -1,53 +1,41 @@
-# Project-wide Gradle settings.
-# IDE (e.g. Android Studio) users:
-# Gradle settings configured through the IDE *will override*
-# any settings specified in this file.
-# For more details on how to configure your build environment visit
+## For more details on how to configure your build environment visit
 # http://www.gradle.org/docs/current/userguide/build_environment.html
+#
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xmx1536m
+# Default value: -Xmx1024m -XX:MaxPermSize=256m
+# org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+#
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-# AndroidX package structure to make it clearer which packages are bundled with the
-# Android operating system, and which are packaged with your app's APK
-# https://developer.android.com/topic/libraries/support-library/androidx-rn
-android.useAndroidX=true
-# Automatically convert third-party libraries to use AndroidX
-android.enableJetifier=true
-
-MIN_SDK=16
-TRAGET_SDK=28
-
-COMPILE_TOOL_API = 29
-COMPILE_TOOL_API_VERSION = 29.0.3
-
-
-VERSION_NAME=0.0.11
-VERSION_CODE=100011
+#Tue Nov 17 23:14:09 CST 2020
+BINTRAY_APIKEY=dc12563ec4b151a253dd4aa83280f05406e90acc
+BINTRAY_USER=jdpxiaoming
+COMPILE_TOOL_API=29
+COMPILE_TOOL_API_VERSION=29.0.3
 GROUP=com.github.jdpxiaoming
-
-# http://central.sonatype.org/pages/requirements.html
-POM_USER_ORG=media
+MIN_SDK=16
+NEXUS_PASSWORD=android
+NEXUS_USERNAME=android
 POM_DESCRIPTION=Video player based on FFmpeg n4.0.2
-POM_URL=https://github.com/jdpxiaoming/FFmpegTools/
-POM_SCM_URL=https://github.com/jdpxiaoming/FFmpegTools.git
-POM_SCM_CONNECTION=scm:git:git@github.com:jdpxiaoming/FFmpegTools.git
-POM_SCM_DEV_CONNECTION=scm:git:git@github.com:jdpxiaoming/FFmpegTools.git
-POM_LICENSE_NAME=LGPL-2.1
-POM_LICENSE_URL=https://www.gnu.org/licenses/lgpl-2.1.html
-POM_LICENSE_DIST=repo
+POM_DEVELOPER_EMAIL=poe.caixingming@gmail.com
 POM_DEVELOPER_ID=jdpxiaoming
 POM_DEVELOPER_NAME=Cai Xing Ming
-POM_DEVELOPER_EMAIL=poe.caixingming@gmail.com
-
-# nexus对应的Maven配置.
-RELEASE_REPOSITORY_URL=http://172.16.22.18:8081/repository/android/
-# 这里我的私有仓库只有release仓库，没有建snapshot和release的host仓库,有兴趣可以自行添加.
-SNAPSHOT_REPOSITORY_URL=http://172.16.22.18:8081/repository/android/
-BINTRAY_USER=jdpxiaoming
-BINTRAY_APIKEY=dc12563ec4b151a253dd4aa83280f05406e90acc
-NEXUS_USERNAME=android
-NEXUS_PASSWORD=android
+POM_LICENSE_DIST=repo
+POM_LICENSE_NAME=LGPL-2.1
+POM_LICENSE_URL=https\://www.gnu.org/licenses/lgpl-2.1.html
+POM_SCM_CONNECTION=scm\:git\:git@github.com\:jdpxiaoming/FFmpegTools.git
+POM_SCM_DEV_CONNECTION=scm\:git\:git@github.com\:jdpxiaoming/FFmpegTools.git
+POM_SCM_URL=https\://github.com/jdpxiaoming/FFmpegTools.git
+POM_URL=https\://github.com/jdpxiaoming/FFmpegTools/
+POM_USER_ORG=media
+RELEASE_REPOSITORY_URL=http\://172.16.22.18\:8081/repository/android/
+SNAPSHOT_REPOSITORY_URL=http\://172.16.22.18\:8081/repository/android/
+TRAGET_SDK=28
+VERSION_CODE=100011
+VERSION_NAME=0.0.11
+android.enableJetifier=true
+android.useAndroidX=true
+org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M"
