--- a/ffmpeg-cmd/build.gradle
+++ b/ffmpeg-cmd/build.gradle
@@ -37,9 +37,6 @@ android {
         }
     }
     ndkVersion = '20.0.5594570'
-    sourceSets.main {
-        jniLibs.srcDirs = ['libs']
-    }
 }
 
 dependencies {
@@ -52,19 +49,8 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 
-//加上这些
-tasks.withType(Javadoc) {
-    options.addStringOption('Xdoclint:none', '-quiet')
-    options.addStringOption('encoding', 'UTF-8')
-    options.addStringOption('charSet', 'UTF-8')
-}
-//新建一个任务，这里只需要定义名字，下面的配置文件中会自动获取相关配置信息.
 //上传maven或者私有库中.
-/*bintrayUpload {
+uploadArchives{
 
-}*/
-//apply from: new File(rootProject.projectDir, "tools/gradle-on-demand.gradle");
-apply from: new File(rootProject.projectDir, 'tools/gradle-bintray-upload.gradle')
-repositories {
-    mavenCentral()
 }
+apply from: new File(rootProject.projectDir, "tools/gradle-on-demand.gradle");
