--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,19 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.4.20'
+    ext.kotlin_version = '1.4.32'
 
     repositories {
-        jcenter()
+        maven { url 'https://maven.aliyun.com/repository/public' }
+        maven { url "https://maven.google.com" }
         google()
-
-        
+        jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.1'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4.1'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7'
+        classpath 'com.android.tools.build:gradle:4.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
+        classpath "org.jetbrains.dokka:dokka-gradle-plugin:1.4.30"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -22,13 +21,11 @@ buildscript {
 
 allprojects {
     repositories {
-        mavenCentral()
-       /* maven {
-            url 'https://dl.bintray.com/caoustc/maven/'
-        }*/
-        maven { url "https://dl.bintray.com/media/maven" }
-        jcenter()
+        //新发布的应用10分钟可以同步到repo1,maven central 需要2个小时.
+        maven { url 'https://maven.aliyun.com/repository/public' }
+        maven { url 'https://repo1.maven.org/maven2/'}
         google()
+        jcenter()
 
     }
 }
