--- a/gradle.properties
+++ b/gradle.properties
@@ -11,31 +11,51 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 #Tue Nov 17 23:14:09 CST 2020
-BINTRAY_APIKEY=dc12563ec4b151a253dd4aa83280f05406e90acc
-BINTRAY_USER=jdpxiaoming
-COMPILE_TOOL_API=29
+
+
+#group id。
+VERSION_CODE=100013
+VERSION_NAME=0.0.13
+GROUP=io.github.jdpxiaoming
+
+COMPILE_TOOL_API=30
 COMPILE_TOOL_API_VERSION=29.0.3
-GROUP=com.github.jdpxiaoming
 MIN_SDK=16
-NEXUS_PASSWORD=android
-NEXUS_USERNAME=android
+TRAGET_SDK=28
+
 POM_DESCRIPTION=Video player based on FFmpeg n4.0.2
 POM_DEVELOPER_EMAIL=poe.caixingming@gmail.com
 POM_DEVELOPER_ID=jdpxiaoming
 POM_DEVELOPER_NAME=Cai Xing Ming
 POM_LICENSE_DIST=repo
 POM_LICENSE_NAME=LGPL-2.1
-POM_LICENSE_URL=https\://www.gnu.org/licenses/lgpl-2.1.html
-POM_SCM_CONNECTION=scm\:git\:git@github.com\:jdpxiaoming/FFmpegTools.git
-POM_SCM_DEV_CONNECTION=scm\:git\:git@github.com\:jdpxiaoming/FFmpegTools.git
-POM_SCM_URL=https\://github.com/jdpxiaoming/FFmpegTools.git
-POM_URL=https\://github.com/jdpxiaoming/FFmpegTools/
+POM_LICENSE_URL=https://www.gnu.org/licenses/lgpl-2.1.html
+POM_SCM_CONNECTION=scm:git:git@github.com:jdpxiaoming/FFmpegTools.git
+POM_SCM_DEV_CONNECTION=scm:git:git@github.com:jdpxiaoming/FFmpegTools.git
+POM_SCM_URL=https://github.com/jdpxiaoming/FFmpegTools.git
+POM_URL=https://github.com/jdpxiaoming/FFmpegTools/
 POM_USER_ORG=media
-RELEASE_REPOSITORY_URL=http\://172.16.22.18\:8081/repository/android/
-SNAPSHOT_REPOSITORY_URL=http\://172.16.22.18\:8081/repository/android/
-TRAGET_SDK=28
-VERSION_CODE=100012
-VERSION_NAME=0.0.12
+
+
+#org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options ="-Xmx2048M"
+
+#服务器地址及账户密码.
+#RELEASE_REPOSITORY_URL=http\://172.16.22.18\:8081/repository/android/
+#SNAPSHOT_REPOSITORY_URL=http\://172.16.22.18\:8081/repository/android/
+NEXUS_USERNAME=jdpxiaoming
+NEXUS_PASSWORD=*****
+
+
+#bintray depercated
+BINTRAY_USER=jdpxiaoming
+BINTRAY_APIKEY=dc12563ec4b151a253dd4aa83280f05406e90acc
+
+#RSS签名秘钥信息.
+signing.keyId=15E7C6E7
+signing.password=*****
+signing.secretKeyRingFile=D\:\\gpg\\secring.gpg
+
+
+# androidx 迁移
 android.enableJetifier=true
 android.useAndroidX=true
-org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M"
