1.增加x264支持. 2.增加64位支持.

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,9 +13,9 @@
 #Tue Nov 17 23:14:09 CST 2020
 
 
-#group id¡£
-VERSION_CODE=100013
-VERSION_NAME=0.0.13
+#group idï¿½ï¿½
+VERSION_CODE=100014
+VERSION_NAME=0.0.14
 GROUP=io.github.jdpxiaoming
 
 COMPILE_TOOL_API=30
@@ -39,7 +39,7 @@ POM_USER_ORG=media
 
 #org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options ="-Xmx2048M"
 
-#·þÎñÆ÷µØÖ·¼°ÕË»§ÃÜÂë.
+#ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ö·ï¿½ï¿½ï¿½Ë»ï¿½ï¿½ï¿½ï¿½ï¿½.
 #RELEASE_REPOSITORY_URL=http\://172.16.22.18\:8081/repository/android/
 #SNAPSHOT_REPOSITORY_URL=http\://172.16.22.18\:8081/repository/android/
 NEXUS_USERNAME=jdpxiaoming
@@ -50,12 +50,12 @@ NEXUS_PASSWORD=*****
 BINTRAY_USER=jdpxiaoming
 BINTRAY_APIKEY=dc12563ec4b151a253dd4aa83280f05406e90acc
 
-#RSSÇ©ÃûÃØÔ¿ÐÅÏ¢.
+#RSSÇ©ï¿½ï¿½ï¿½ï¿½Ô¿ï¿½ï¿½Ï¢.
 signing.keyId=15E7C6E7
 signing.password=*****
 signing.secretKeyRingFile=D\:\\gpg\\secring.gpg
 
 
-# androidx Ç¨ÒÆ
+# androidx Ç¨ï¿½ï¿½
 android.enableJetifier=true
 android.useAndroidX=true
