--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,7 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         ndk {
-            abiFilters "armeabi-v7a"//"arm64-v8a"/*,"""armeabi-v7a"*/
+            abiFilters /*"arm64-v8a",*/"armeabi-v7a"
         }
     }
 
