--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,8 @@ buildscript {
 
     repositories {
         maven { url 'https://maven.aliyun.com/repository/public' }
-        maven { url "https://maven.google.com" }
+//        maven { url "https://maven.google.com" }
         google()
-        jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.3'
@@ -23,10 +22,8 @@ allprojects {
     repositories {
         //新发布的应用10分钟可以同步到repo1,maven central 需要2个小时.
         maven { url 'https://maven.aliyun.com/repository/public' }
-        maven { url 'https://repo1.maven.org/maven2/'}
+//        maven { url 'https://repo1.maven.org/maven2/'}
         google()
-        jcenter()
-
     }
 }
 
