--- a/ffmpeg-cmd/build.gradle
+++ b/ffmpeg-cmd/build.gradle
@@ -18,7 +18,7 @@ android {
             }
         }
         ndk {
-            abiFilters "armeabi-v7a"//"arm64-v8a"/*,"""armeabi-v7a"*/
+            abiFilters /*"arm64-v8a",*/"armeabi-v7a"
         }
     }
 
